--- a/tilfeldigtrefakta.no/index.html
+++ b/tilfeldigtrefakta.no/index.html
@@ -19,6 +19,7 @@
         <a href="kilder.html">Kilder</a>
         <a href="omoss.html">Hvem er vi?</a>
     </nav>
+    <main>
     <div id="tilfeldig">
         <button id="quotebutton" onclick="newQuote()">Tilfeldig Fakta</button>
     </div>
@@ -27,6 +28,10 @@
         <!-- Trefakta vill havne her-->
     </div>
     </div>
-    <script src="script.js"></script>
+    </main>
+    <footer>
+        <span class="copyright">&copy;</span>2020 Tobias Sanaker Dagestad
+    </footer>
 </body>
+<script src="script.js"></script>
 </html>
