--- a/tilfeldigtrefakta.no/kilder.html
+++ b/tilfeldigtrefakta.no/kilder.html
@@ -19,6 +19,7 @@
         <a class="active" href="kilder.html">Kilder</a>
         <a href="omoss.html">Hvem er vi?</a>
     </nav>
+    <main>
     <article id="nrk">
         <a href="https://www.nrk.no/nordland/sa-mange-traer-finnes-det-i-hele-verden-1.12533239" target="_blank" class="button">nrk.no</a>
     </article>
@@ -34,5 +35,9 @@
     <article id="facebook">
         <a href="https://www.facebook.com/bymiljoetaten/photos/fantastiske-fakta-om-tr%C3%A6r-visste-du-at-tr%C3%A6r-er-de-desidert-lengstlevende-organis/2246584412026068/ " target="_blank" class="button">Facebook</a>
     </article>
+    </main>
+    <footer>
+        <span class="copyright">&copy;</span>2020 Tobias Sanaker Dagestad
+    </footer>
 </body>
 </html>
