--- a/tilfeldigtrefakta.no/omoss.html
+++ b/tilfeldigtrefakta.no/omoss.html
@@ -23,12 +23,17 @@
     <h1>Fjesene bak nettsiden</h1>
     <article id="tobias">
         <h2>Tobias Dagestad</h2>
-        <img src="bilder/tobias.jpg" alt="bilde av Tobias">
+        <img id="tobiasbilde"src="bilder/tobias.jpg" alt="bilde av Tobias">
+        <h3>Eier & Redaktør</h3>
     </article>
     <article id="donald">
         <h2>Aleksander Lunde</h2>
-        <img src="bilder/donald.jpg" alt="bilde av aleks">
+        <img id="aleksbilde" src="bilder/donald.jpg" alt="bilde av aleks">
+        <h3>Medier & Investor</h3>
     </article>
     </main>
+    <footer>
+        <span class="copyright">&copy;</span>2020 Tobias Sanaker Dagestad
+    </footer>
 </body>
 </html>
