--- a/tilfeldigtrefakta.no/social.html
+++ b/tilfeldigtrefakta.no/social.html
@@ -19,6 +19,7 @@
         <a href="kilder.html">Kilder</a>
         <a href="omoss.html">Hvem er vi?</a>
     </nav>
+    <main>
     <article id="discord">
         <h2>Bli en del av stammen, join discord!</h2>
         <a href="https://discord.com/invite/eQUUf25" target="_blank" class="button">Join Discord her</a>
@@ -28,5 +29,9 @@
         <h3>Vi er en liten stamme, bestående av 2 personer, vis du liker våre tilfeldige tre-fakta, så kan du vis du har lyst, legge inn en liten slant</h3>
         <a href="https://www.paypal.com/pools/c/8qmuZ8aGT4" target="_blank" class="button">Doner</a>
     </article>
+    </main>
+    <footer>
+        <span class="copyright">&copy;</span>2020 Tobias Sanaker Dagestad
+    </footer>
 </body>
 </html>
