--- a/tilfeldigtrefakta.no/social.html
+++ b/tilfeldigtrefakta.no/social.html
@@ -26,8 +26,12 @@
     </article>
     <article id="doner">
         <h2>Støtt den lille stammen vår:</h2>
-        <h3>Vi er en liten stamme, bestående av 2 personer, vis du liker våre tilfeldige tre-fakta, så kan du vis du har lyst, legge inn en liten slant</h3>
+        <h3>Vi er en liten stamme, bestående av 2 personer, hvis du liker våre tilfeldige tre-fakta, så kan du hvis du har lyst, legge inn en liten slant</h3>
         <a href="https://www.paypal.com/pools/c/8qmuZ8aGT4" target="_blank" class="button">Doner</a>
+    </article>
+    <article id="stotte">
+        <h2>Spirer som har donert så langt :D</h2>
+        <img src="bilder/Skjermbilde 2020-11-16 004845.png" alt="Tor Espen Ovesen" />
     </article>
     </main>
     <footer>
